<resources>
    //app
    <string name="app_name">FvM</string>

    //nav
    <string name="menu_home">Inditás</string>
    <string name="menu_settings">Beállítások</string>
    <string name="menu_packs">Packok</string>

    //homepage
    <string name="title_home">Felesz Vagy Mersz</string>

    //game
    <string name="felelsz">Felelsz</string>
    <string name="mersz">Mersz</string>
    <string name="_dare">Merek</string>
    <string name="_truth">Felelek</string>

    <string name="Def_Person_0">tőled jobbra ülő</string>
    <string name="Def_Person_1">tőled balra ülő</string>

    //players
    <string name="title_player">Játékosok</string>
    <string name="player_add">Új játékos</string>
    <string name="player_delete">Törlés</string>
    <string name="player_edit">módosít</string>

    //dialog
    <string name="dialog_add">Kész</string>
    <string name="dialog_cancel">Mégse</string>
    <string name="dialog_title">Új játékos</string>
    <string name="dialog_name">Név</string>
    <string name="dialog_login">Bejelentkezés</string>
    <string name="dialog_register">Regisztráció</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="password2">Jelszó mégegyszer</string>

    <string-array name="dialog_gender">
        <item>Fiú</item>
        <item>Lány</item>
    </string-array>
    <string-array name="question_type">
        <item>Felelsz</item>
        <item>Mersz</item>
    </string-array>

    //settings
    <string name="pack">Packok</string>
    <string name="packs">Alap_Packok</string>
    <string name="packs2">Saját_Packok</string>
    <string name="Default">Default</string>
    <string name="option1">Mindenki mindekivel</string>
    <string name="option2">Kimaradás(4 főtől)</string>
    <string name="option3">Véletlenszerű sorrend</string>
    <string name="textview">Test</string>
    <string name="other">Egyéb</string>

    //packs
    <string name="pack1">Pack1</string>
    <string name="pack2">Pack2</string>
    <string name="title_activity_game">GameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fiok">Fiók</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="kijelentkezes">Kijelenetkezés</string>
    <string name="kezdes">Kezdés</string>


</resources>