<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.settings"
    android:background="@color/white2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/item_LVL_1"
            android:text="@string/menu_settings"
            android:textColor="@color/cardview_dark_background" />


        <FrameLayout
            android:id="@+id/user_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </FrameLayout>

        <TextView
            android:id="@+id/other"
            style="@style/item_LVL_2"
            android:text="@string/other" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/kimaradas"
            style="@style/item_LVL_3"
            android:text="@string/option2" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/random"
            style="@style/item_LVL_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>