<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.game.TruthFragment"
    android:background="@color/truth_color">

    <TextView
        android:id="@+id/truth_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Sample"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/truth_question_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/coordinatorLayout"
        app:layout_constraintStart_toStartOf="@+id/coordinatorLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="30dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/_dare"
            app:maxImageSize="40dp"
            app:fabCustomSize="70dp"
            app:srcCompat="@drawable/ic_arrow_right" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/new_q_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="30dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/_truth"
            app:maxImageSize="40dp"
            app:fabCustomSize="70dp"
            app:srcCompat="@drawable/ic_refresh" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>